{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 14,
  "lineage": "77b339fe-e83b-61bd-3a72-0530a1610d61",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:454292364057:instance/i-0d1f890fc41ad7580",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1f890fc41ad7580",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e861ead2a184adc",
            "private_dns": "ip-10-0-128-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.128.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007e39f84f08ff37a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f32469c882fed68",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "12-public-modules"
            },
            "vpc_security_group_ids": [
              "sg-049e1f39e84456029"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.azs",
            "module.ec2.aws_iam_instance_profile.this",
            "module.ec2.aws_iam_role.this",
            "module.ec2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.data.aws_partition.current",
            "module.ec2.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:network-acl/acl-0d48c534d546a72d0",
            "default_network_acl_id": "acl-0d48c534d546a72d0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d48c534d546a72d0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "454292364057",
            "subnet_ids": [
              "subnet-01f32469c882fed68",
              "subnet-0bb477da360bc18d6"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-029f5e86dd4fd085a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:route-table/rtb-0d436fb311a1edb90",
            "default_route_table_id": "rtb-0d436fb311a1edb90",
            "id": "rtb-0d436fb311a1edb90",
            "owner_id": "454292364057",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-029f5e86dd4fd085a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:security-group/sg-049e1f39e84456029",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-049e1f39e84456029",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "454292364057",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-029f5e86dd4fd085a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:internet-gateway/igw-0a3f3467baa308279",
            "id": "igw-0a3f3467baa308279",
            "owner_id": "454292364057",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-029f5e86dd4fd085a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a3f3467baa308279",
            "id": "r-rtb-0519208e8ad098f6b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0519208e8ad098f6b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:route-table/rtb-01d722792a37bdd1f",
            "id": "rtb-01d722792a37bdd1f",
            "owner_id": "454292364057",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-private-us-east-1a",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-private-us-east-1a",
              "Project": "12-public-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-029f5e86dd4fd085a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:route-table/rtb-0519208e8ad098f6b",
            "id": "rtb-0519208e8ad098f6b",
            "owner_id": "454292364057",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-public",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-public",
              "Project": "12-public-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-029f5e86dd4fd085a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d10c1f92cddbce28",
            "route_table_id": "rtb-01d722792a37bdd1f",
            "subnet_id": "subnet-0bb477da360bc18d6"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083f71e20b4ac50b3",
            "route_table_id": "rtb-0519208e8ad098f6b",
            "subnet_id": "subnet-01f32469c882fed68"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:subnet/subnet-0bb477da360bc18d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb477da360bc18d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454292364057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-private-us-east-1a",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-private-us-east-1a",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-029f5e86dd4fd085a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:subnet/subnet-01f32469c882fed68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f32469c882fed68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454292364057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-public-us-east-1a",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-public-us-east-1a",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-029f5e86dd4fd085a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:vpc/vpc-029f5e86dd4fd085a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d48c534d546a72d0",
            "default_route_table_id": "rtb-0d436fb311a1edb90",
            "default_security_group_id": "sg-049e1f39e84456029",
            "dhcp_options_id": "dopt-7166120b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-029f5e86dd4fd085a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d436fb311a1edb90",
            "owner_id": "454292364057",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            }
          }
        }
      ]
    }
  ]
}